sort.basic.cocktail.AlgCocktailSort2.scala.error
Erreur de compilation :
AlgCocktailSort2:2: error: identifier expected but integer literal found.
def cocktailSort2() {var x:Int=getValueCount(); var y:Int=0; var test:Boolean=false; var count:Int=-1;
                                                                                                    ^